--- a/aula_1.html
+++ b/aula_1.html
@@ -635,6 +635,63 @@
                 <li>Microsoft. Security Development Lifecycle (SDL). Disponível em: <a href="https://learn.microsoft.com/pt-br/compliance/assurance/assurance-microsoft-security-development-lifecycle" target="_blank">https://learn.microsoft.com/pt-br/compliance/assurance/assurance-microsoft-security-development-lifecycle</a>. Acesso em: 20 abr. 2025.</li>
             </ol>
         </section>
+
+
+
+        <div class="container my-5">
+            <h1>Exercicíos  da Prova</h1>
+            <!-- Container Responsivo para o iframe -->
+            <div class="ratio ratio-16x9">
+                <iframe src="https://forms.gle/WJ68JnA6VNJ2K3ps7"" frameborder="0" allowfullscreen>
+                    Exercicíos  da Prova
+                </iframe>
+            </div>
+        </div>
+
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#respostasCollapse" aria-expanded="false" aria-controls="respostasCollapse">
+            Mostrar Respostas
+        </button>
+
+
+
+        <div class="card card-body shadow-sm" id="respostasCollapse">
+            <h5 class="mb-3"><i class="bi bi-chat-left-text"></i> Respostas dos Exercicíos:</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 1:</strong> A criptografia dos dados inviabilizou o acesso legítimo, tornando os sistemas inacessíveis.</span>
+                <span class="badge bg-primary rounded-pill">#1</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 2:</strong> Disponibilidade – já que os usuários legítimos não conseguiram acessar o serviço.</span>
+                <span class="badge bg-primary rounded-pill">#2</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 3:</strong>  Armazenar backups em local geograficamente distante (off-site)</span>
+                <span class="badge bg-primary rounded-pill ">#3</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 4:</strong>   Disponibilidade, Continuidade e Resiliência</span>
+                <span class="badge bg-primary rounded-pill ">#4</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 5:</strong> Disponibilidade </span>
+                <span class="badge bg-primary rounded-pill ">#5</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 6:</strong>  A07:2021 – Identification and Authentication Failures (Falhas de identificação e autenticação)</span>
+                <span class="badge bg-primary rounded-pill">#6</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 7:</strong>  A03:2021 – Injection (Injeção de Dados)</span>
+                <span class="badge bg-primaryrounded-pill ">#7</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span><strong>Resposta 8:</strong>  Ausência de validação/sanitização de inputs, que permitiu a execução de comandos SQL maliciosos e vazamento de dados sensíveis.</span>
+                <span class="badge bg-primary rounded-pill ">#8</span>
+              </li>
+            </ul>
+          </div>
+          
     </div>
 
     <!-- Bootstrap JS Bundle with Popper -->
